recipes-extended/iptables/iptables/iptables.rules
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -m conntrack --ctstate INVALID -j DROP
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -m conntrack --ctstate NEW -m limit --limit 3/min --limit-burst 5 -j ACCEPT
-A INPUT -p tcp -m tcp -s 10.0.0.0/8 --dport 443 -m connlimit --connlimit-above 30 -j DROP
-A INPUT -p tcp -m tcp -s 172.16.0.0/12 --dport 443 -m connlimit --connlimit-above 30 -j DROP
-A INPUT -p tcp -m tcp -s 192.168.0.0/16 --dport 443 -m connlimit --connlimit-above 30 -j DROP
-A INPUT -p tcp -m tcp -s 10.0.0.0/8 --dport 443 -m conntrack --ctstate NEW -m limit --limit 25/min --limit-burst 50 -j ACCEPT
-A INPUT -p tcp -m tcp -s 172.16.0.0/12 --dport 443 -m conntrack --ctstate NEW -m limit --limit 25/min --limit-burst 50 -j ACCEPT
-A INPUT -p tcp -m tcp -s 192.168.0.0/16 --dport 443 -m conntrack --ctstate NEW -m limit --limit 25/min --limit-burst 50 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 3 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 11/0 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 8 -m limit --limit 1/sec -j ACCEPT
-A INPUT -p udp -m udp --sport 67 --dport 68 -j ACCEPT
-A INPUT -m limit --limit 5/min --limit-burst 10 -j LOG --log-prefix "iptables:DROP:IN " --log-level 4
-A INPUT -j AUDIT --type drop
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -m conntrack --ctstate INVALID -j DROP
-A OUTPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -p icmp -m icmp --icmp-type 3 -j ACCEPT
-A OUTPUT -p icmp -m icmp --icmp-type 11/0 -j ACCEPT
-A OUTPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 123 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 53 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 53 -j ACCEPT
-A OUTPUT -p udp -m udp --sport 68 --dport 67 -j ACCEPT
-A OUTPUT -m limit --limit 5/min --limit-burst 10 -j LOG --log-prefix "iptables:DROP:OUT " --log-level 4
-A OUTPUT -j AUDIT --type drop
-A FORWARD -m limit --limit 5/min --limit-burst 10 -j LOG --log-prefix "iptables:DROP:FWD " --log-level 4
-A FORWARD -j AUDIT --type drop
COMMIT
